--- a/package.json
+++ b/package.json
@@ -4,18 +4,33 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "android": "expo start --android --port 9988",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
+    "axios": "^1.6.0",
     "expo": "~49.0.15",
+    "expo-linear-gradient": "^12.5.0",
     "expo-status-bar": "~1.6.0",
+    "lodash": "^4.17.21",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-progress": "^5.0.1",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
